--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -1,4 +1,1 @@
-environment = https://nawa-test.opi.org.pl
-environment = https://nawa-uat.opi.org.pl
-https://nawa-uat-programs.opi.org.pl
-environment = @environment@
+enviromnemnt=${environment}
